src/test/deca/context/valid/sans_objet/expr_alone_cont_01.deca
// Description:
//    Programme pour tester les expressions dans inst
//
// Resultats:
//
// Historique:
//    cree le 04/01/2023

{
   4*5;
   readInt();
   readFloat();
   3;
}